@@ -311,7 +311,7 @@ public class KVSClient implements KVS {
             throw new RuntimeException("PUT returned something other than OK: " + result);
     }
 
-    public void batchAppendToRow(String tableName, String column, Map<String, String> rowsAndValues, String delimiter) throws IOException {
+    public void batchAppendToRow(String tableName, String column, Map<String, String> rowsAndValues) throws IOException {
         if (!haveWorkers)
             downloadWorkers();
 
@@ -329,7 +329,7 @@ public class KVSClient implements KVS {
                 String rowsString = String.join(BATCH_UNIQUE_SEPARATOR, rowsForWorker);
                 byte[] body = rowsString.getBytes(StandardCharsets.UTF_8);
 
-                String target = "http://" + workerAddress + "/batchAppend/data/" + tableName + "/" + URLEncoder.encode(column, "UTF-8") + "/" + "?delimiter=" + URLEncoder.encode(delimiter, "UTF-8");
+                String target = "http://" + workerAddress + "/batchAppend/data/" + tableName + "/" + URLEncoder.encode(column, StandardCharsets.UTF_8);
 
                 byte[] response = HTTP.doRequest("PUT", target, body).body();
                 String result = new String(response);
